<resources>
    <string name="app_name">DataBindingSample</string>
    <string name="likes">Likes</string>
    <string name="textview">TextView</string>
    <string name="profile_name">NAME</string>
    <string name="profile_lastname">LAST NAME</string>
    <string name="last_name_label">Last name</string>
    <string name="name_label">Name</string>
    <string name="profile_avatar_cd">Profile\'s avatar</string>
    <string name="like">Like</string>
    <string name="viewmodel_profile_bnt_text">ViewModel Activity</string>
    <string name="viewmodel_profile_tv_text">Использование <b>View Binding</b> из <b>Android Jetpack</b> для демонстрации</string>
</resources>